--- a/cascade-generator/pyproject.toml
+++ b/cascade-generator/pyproject.toml
@@ -18,6 +18,7 @@ tqdm = "^4.59.0"
 [tool.poetry.dev-dependencies]
 nose2 = "^0.10.0"
 IPython = "^7.21.0"
+python-language-server = {extras = ["all"], version = "^0.36.2"}
 
 [build-system]
 requires = ["poetry>=0.12"]
